--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,18 @@
 # Site settings
 title: Casey Woolley
-email: your-email@domain.com
+email: caseywoolley@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+I have some random stuff to say, I guess I'll put it here.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://caseywoolley.github.io" # the base hostname & protocol for your site
+twitter_username: caseywoolley
+github_username:  caseywoolley
 
 # Build settings
 markdown: kramdown
 
 paginate: 4
 
-author: Your name
+author: Casey Woolley
 
 gems: [jekyll-paginate]
